--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,16 +20,16 @@ jobs:
           npm install
           npm run build
 
-      - name: Configure PHP 8.0
-        uses: shivammathur/setup-php@master
-        with:
-          php-version: 8.0
+      # - name: Configure PHP 8.0
+      #   uses: shivammathur/setup-php@master
+      #   with:
+      #     php-version: 8.0
 
-      - name: Validate composer.json and composer.lock
-        run: composer validate --strict
+      # - name: Validate composer.json and composer.lock
+      #   run: composer validate --strict
 
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
+      # - name: Install dependencies
+      #   run: composer install --prefer-dist --no-progress
 
     # - name: Cache Composer packages
     #   id: composer-cache
