--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16.13
 
       - name: Compile CSS and Javascript
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.13'
         run: |
           npm install
           npm run build
