--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Compile CSS and Javascript
         run: |
-          npm install
+          npm ci
           npm run build
 
       # - name: Configure PHP 8.0
