--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
 
-      # - name: Install dependencies
-      #   run: composer install --prefer-dist --no-progress
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
 
     # - name: Cache Composer packages
     #   id: composer-cache
