--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,11 @@ jobs:
           GITHUB_SHA: ${{ github.sha }}
           run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules --exclude=.husky *
 
-      - name: Store artifact for distribution
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-build
-          path: ${{ github.sha }}.tar.gz
+      # - name: Store artifact for distribution
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: app-build
+      #     path: ${{ github.sha }}.tar.gz
 
     # - name: Cache Composer packages
     #   id: composer-cache
