--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,9 @@ jobs:
 
       # //
   prepare-release-on-servers:
-    name: "prepare release"
+    name: 'prepare release'
     runs-on: ubuntu-latest
-    needs: create-deployment-artifacts
+    needs: app-build
     steps:
       - uses: actions/download-artifact@v3
         with:
