--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
   prepare-release-on-servers:
     name: 'prepare release'
     runs-on: ubuntu-latest
-    needs: app-build
+    needs: build
     steps:
       - uses: actions/download-artifact@v3
         with:
