--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Configure PHP 8.0
         uses: shivammathur/setup-php@master
         with:
-          php-version: 8.0
+          php-version: 8.1
 
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
@@ -60,6 +60,20 @@ jobs:
           port: ${{ secrets.PORT }}
           source: ${{ github.sha }}.tar.gz
           target: ${{ secrets.PATH }}/artifacts
+
+      - name: Extract archive and create directories
+        uses: appleboy/ssh-action@master
+        env:
+          GITHUB_SHA: ${{ github.sha }}
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          envs: GITHUB_SHA
+          script: |
+            mkdir -p "${{ secrets.PATH }}/releases/${GITHUB_SHA}"
+            tar xzf ${{ secrets.PATH}}/artifacts/${GITHUB_SHA}.tar.gz -C "${{ secrets.PATH}}/releases/${GITHUB_SHA}"
 
     # - name: Cache Composer packages
     #   id: composer-cache
