--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Create deployment artifact
         env:
           GITHUB_SHA: ${{ github.sha }}
-        run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules --exclude=.husky *
+        run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules --exclude=.husky --exclude=commitlint.config.js --exclude=git-precommit-checks.config.js --exclude=webpack.mix.js *
 
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v3
@@ -72,20 +72,48 @@ jobs:
           port: ${{ secrets.PORT }}
           envs: GITHUB_SHA
           script: |
-            mkdir -p "${{ secrets.PATH }}/releases/${GITHUB_SHA}"
-            tar xzf ${{ secrets.PATH}}/artifacts/${GITHUB_SHA}.tar.gz -C "${{ secrets.PATH}}/releases/${GITHUB_SHA}"
+            mkdir -p "${{ secrets.PATH }}/www/releases/${GITHUB_SHA}"
+            tar xzf ${{ secrets.PATH}}/artifacts/${GITHUB_SHA}.tar.gz -C "${{ secrets.PATH}}/www/releases/${GITHUB_SHA}"
 
-    # - name: Cache Composer packages
-    #   id: composer-cache
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: vendor
-    #     key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-    #     restore-keys: |
-    #       ${{ runner.os }}-php-
+    run-before-hooks:
+      name: "Before hook"
+      runs-on: ubuntu-latest
+      needs: [ prepare-release-on-servers ]
+      steps:
+      - name: Run before hooks
+        uses: appleboy/ssh-action@master
+        env:
+          GITHUB_SHA: ${{ github.sha }}
+          RELEASE_PATH: ${{ secrets.PATH }}/www/releases/${{ github.sha }}
+          ACTIVE_RELEASE_PATH: ${{ secrets.PATH }}/www/current
+          BASE_PATH: ${{ secrets.PATH }}
+        with:
+          host: ${{ secrets.server.ip }}
+          username: ${{ secrets.USERNAME}}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT}}
+          envs: envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,BASE_PATH
+          script: |
+            echo before activating release
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+    activate-release:
+      name: "Activate release"
+      runs-on: ubuntu-latest
+      needs: [ prepare-release-on-servers, run-before-hooks ]
+      steps:
+        - name: Activate release
+          uses: appleboy/ssh-action@master
+          env:
+          GITHUB_SHA: ${{ github.sha }}
+          RELEASE_PATH: ${{ secrets.PATH }}/www/releases/${{ github.sha }}
+          ACTIVE_RELEASE_PATH: ${{ secrets.PATH }}/www/current
+          BASE_PATH: ${{ secrets.PATH }}
+          with:
+            host: ${{ secrets.server.ip }}
+            username: ${{ secrets.USERNAME}}
+            password: ${{ secrets.PASSWORD }}
+            port: ${{ secrets.PORT}}
+            envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,BASE_PATH,ENV_PATH
+            script: |
+              ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
+              service php8.1-fpm reload
