--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
         env:
           GITHUB_SHA: ${{ github.sha }}
           RELEASE_PATH: ${{ secrets.PATH }}/releases/${{ github.sha }}
-          ACTIVE_RELEASE_PATH: ${{ secrets.PATH }}/www/current/
+          ACTIVE_RELEASE_PATH: ${{ secrets.PATH }}/www/current
           BASE_PATH: ${{ secrets.PATH }}
         with:
           host: ${{ secrets.HOST }}
