--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
         uses: appleboy/ssh-action@master
         env:
           GITHUB_SHA: ${{ github.sha }}
-          RELEASE_PATH: ${{ secrets.PATH }}/www/releases/${{ github.sha }}
+          RELEASE_PATH: ${{ secrets.PATH }}/www/releases/${{ github.sha }}/web
           ACTIVE_RELEASE_PATH: ${{ secrets.PATH }}/www/current
           BASE_PATH: ${{ secrets.PATH }}
         with:
