--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,3 +117,44 @@ jobs:
           script: |
             cd ${{ secrets.PATH }}/www
             ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
+
+  run-before-hooks:
+    name: 'Before hook'
+    runs-on: ubuntu-latest
+    needs: [prepare-release-on-servers]
+    steps:
+      - name: Run before hooks
+        uses: appleboy/ssh-action@master
+        env:
+          GITHUB_SHA: ${{ github.sha }}
+          RELEASE_PATH: ${{ secrets.PATH }}/www/releases/${{ github.sha }}
+          ACTIVE_RELEASE_PATH: ${{ secrets.PATH }}/www/current
+          BASE_PATH: ${{ secrets.PATH }}
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME}}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT}}
+          envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,BASE_PATH
+          script: |
+            echo after activating release
+
+  clean-up:
+    name: "Clean up"
+    runs-on: ubuntu-latest
+    needs: [prepare-release-on-servers, run-before-hooks, activate-release, run-after-hooks ]
+    steps:
+      - name: Run after hooks
+        uses: appleboy/ssh-action@master
+        env:
+          RELEASES_PATH: ${{ secrets.PATH }}/www/releases
+          ARTIFACTS_PATH: ${{ secrets.PATH }}/artifacts
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME}}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT}}
+          envs: RELEASES_PATH
+          script: |
+            cd $RELEASES_PATH && ls -t -1 | tail -n +1 | xargs rm -rf
+            cd $ARTIFACTS_PATH && ls -t -1 | tail -n +1 | xargs rm -rf
