--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,12 +118,12 @@ jobs:
             cd ${{ secrets.PATH }}/www
             ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
 
-  run-before-hooks:
-    name: 'Before hook'
+  run-after-hooks:
+    name: 'After hook'
     runs-on: ubuntu-latest
     needs: [prepare-release-on-servers]
     steps:
-      - name: Run before hooks
+      - name: Run after hooks
         uses: appleboy/ssh-action@master
         env:
           GITHUB_SHA: ${{ github.sha }}
@@ -140,9 +140,9 @@ jobs:
             echo after activating release
 
   clean-up:
-    name: "Clean up"
+    name: 'Clean up'
     runs-on: ubuntu-latest
-    needs: [prepare-release-on-servers, run-before-hooks, activate-release, run-after-hooks ]
+    needs: [prepare-release-on-servers, run-before-hooks, activate-release, run-after-hooks]
     steps:
       - name: Run after hooks
         uses: appleboy/ssh-action@master
