--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,7 +121,7 @@ jobs:
   run-after-hooks:
     name: 'After hook'
     runs-on: ubuntu-latest
-    needs: [prepare-release-on-servers]
+    needs: [prepare-release-on-servers, run-before-hooks, activate-release]
     steps:
       - name: Run after hooks
         uses: appleboy/ssh-action@master
@@ -157,4 +157,4 @@ jobs:
           envs: RELEASES_PATH
           script: |
             cd $RELEASES_PATH && ls -t -1 | tail -n +1 | xargs rm -rf
-            cd $ARTIFACTS_PATH && ls -t -1 | tail -n +1 | xargs rm -rf
+            cd $ARTIFACTS_PATH && ls -t -1 | tail -n +2 | xargs rm -rf
